src/main.less
/* eslint-disable */
.qv-object-qlik-smart-pivot {
  @TableBorder: 1px solid #d3d3d3;
  @KpiTableWidth: 230px;

  *,
  *::before,
  *::after {
    box-sizing: border-box;
  }

  .edit-mode {
    pointer-events: none;
  }

  ._cell(@Width: 50px) {
    min-width: @Width !important;
    max-width: @Width !important;
    cursor: pointer;
    line-height: 1em !important;
  }

  div.qv-object-content-container {
    z-index: 110;
  }

  .icon-xls {
    text-align: left;
  }

  button {
    width: 100%;
  }

  table {
    border-collapse: collapse;
    border-spacing: 0;
    width: auto;
    border-left: @TableBorder;
    border-right: @TableBorder;
    border-top: @TableBorder;
  }

  td,
  th {
    border: 1px solid #fff;
    border-collapse: collapse;
    padding: 5px !important; // prevent overwriting from single object
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    vertical-align: middle;
    cursor: default;

    > div {
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      font-family: inherit;
    }
  }

  .empty {
    width: 3%;
    background: #fff;
    min-width: 4px !important;
    max-width: 4px !important;
  }

  th.main-kpi {
    text-align: center;
    vertical-align: middle;
    border-bottom: @TableBorder;
  }

  .numeric {
    text-align: right;
  }

  // This is for wrap text in headers 
  .wrapclass25 {
    width: 100%;
    height: inherit;
    white-space: pre-line;
    overflow: hidden;
    display: block;
    text-overflow: ellipsis;
  }

  .wrapclass45 {
    width: 100%;
    height: 45px;
    white-space: pre-line;
    overflow: hidden;
    display: block;
  }

  .wrapclass70 {
    width: 100%;
    height: 70px;
    white-space: pre-line;
    overflow: hidden;
    display: inline-block;
    vertical-align: middle;
    line-height: 20px;
  }

  .wrapclassEmpty {
    width: 100%;
  }

  // ***************** 
  // Medium column size 
  // ***************** 

  .grid-cells {
    position: relative;
    ._cell(70px);
  }

  .grid-cells2 {
    ._cell(70px);
  }

  .grid-cells-small {
    ._cell(52px);
  }

  .grid-cells2-small {
    ._cell(52px);
  }

  // ***************** 
  // Small column size 
  // ***************** 
  .grid-cells-s {
    ._cell(67px);
  }

  .grid-cells2-s {
    ._cell(67px);
  }

  .grid-cells-small-s {
    ._cell(52px);
  }

  .grid-cells2-small-s {
    ._cell(52px);
  }

  // ***************** 
  // Large column size 
  // ***************** 
  .grid-cells-l {
    ._cell(82px);
  }

  .grid-cells2-l {
    ._cell(82px);
  }

  .grid-cells-small-l {
    ._cell(66px);
  }

  .grid-cells2-small-l {
    ._cell(66px);
  }

  // END OF GRID CELLS

  // First Column 
  .fdim-cells {
    min-width: 230px !Important;
    max-width: 230px !Important;
    cursor: pointer;
    background-color: #fff;
  }

  .fdim-cells:hover {
    background-color: #808080 !important;
    color: #fff;
  }

  tbody tr:hover {
    cursor: default;
    background-color: #808080 !important;
    color: #fff;
  }

  .grid-cells-header {
    padding: 0;
  }

  .grid-cells-title {
    min-width: 522px;
  }

  .grid {
    height: 50px;
    width: 350px;
  }

  .tooltip {
    position: fixed !important;
    color: rgb(70, 70, 70);
    background-color: rgb(245, 239, 207);
    text-align: center;
    border: groove;
  }

  .kpi-table .fdim-cells,
  .data-table td {
    line-height: 1em !important;
  }

  .data-table .fdim-cells {
    display: none;
  }

  .kpi-table {
    width: @KpiTableWidth !important;
    overflow: hidden !important;
    height: 100%;
    margin: 0;
    padding: 0;
    position: absolute;
    top: 0;
    left: 0;
    border-right: 1px solid #fff;
    box-shadow: 4px 2px 8px #e1e1e1;

    .row-wrapper {
      height: calc(~"100% - 97px");
      overflow: scroll;
      position: absolute;
      padding: 0;
      margin-top: 0;
    }
  }

  .row-wrapper .fdim-cells {
    padding-left: 12px;
  }

  .data-table {
    height: 100%;
    width: calc(100% - 243px);
    position: absolute;
    margin-left: @KpiTableWidth + 13px;

    .header-wrapper {
      overflow: scroll;
      width: 100%;
    }

    .row-wrapper {
      height: calc(~"100% - 97px");
      width: 100%;
      overflow: scroll;
      padding: 0;
      margin-top: 0;
    }
  }

  // hide scrollbars
  .kpi-table .header-wrapper,
  .data-table .header-wrapper {
    // stylelint-disable-next-line property-no-unknown 
    scrollbar-width: none;
    -ms-overflow-style: none; // IE 10+
    -moz-overflow: -moz-scrollbars-none; // Firefox

    &::-webkit-scrollbar {
      display: none; // Safari and Chrome
    }
  }

  .tooltip-wrapper {
    min-width: 25px;
    position: fixed;
    padding: 5px;
    padding-top: 8px;
    background-color: #404040;
    z-index: 100;
    pointer-events: none;
    border-radius: 5px;
    height: 30px;
    width: auto;
    opacity: 0.9;
    text-align: center;
    transform: translate(-50%, -110%);

    &::after {
      content: "";
      position: absolute;
      bottom: -10px;
      left: 50%;
      border-width: 10px 10px 0;
      border-style: solid;
      border-color: #404040 transparent;
      margin-left: -10px;
      pointer-events: none;
    }

    > p {
      color: #fff;
    }
  }
}

/* eslint-enable */

